updates styles for splash page. fixes spacing error caused by tooltip being display:none for splash instead of visibility:hidden

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -13,8 +13,9 @@ body{
   min-width: 1162px;
 }
 
-header{
+header {
   padding-top: 40px;
+
   @media #{$medium-down}{
     padding: 0;
   }
@@ -653,5 +654,5 @@ text{
 }
 
 .hidden {
-  display: none;
+  visibility: hidden;
 }
