--- a/src/sass/partials/_splash.scss
+++ b/src/sass/partials/_splash.scss
@@ -1,8 +1,9 @@
 /* Styles for Splash Page */
-
+ 
 .splash{
-  padding-bottom: 10px;
+  // padding-bottom: 10px;
   border-top-left-radius: 5px;
+  background-color: $light_grey;
     
   @media #{$medium-down}{
     border-top-left-radius: 5px;
@@ -10,14 +11,16 @@
   }
 
   section:first-child {
-    padding: 40px 40px 30px;
+    padding: 30px 30px 25px;
     background-color: $light_grey;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
 
     @media #{$large-only}{
-      width: 17%;
+      padding: 30px;
+      width: 17.5%;
       float: left;
+      border-top-right-radius: none;
     }
 
     p{
@@ -28,7 +31,7 @@
       text-align: center;
 
       @media #{$large-only}{
-        font-weight: 0.7em;
+        font-size: 13px;
         text-align: left;
         max-width: 100%;
         margin: 10px 0 20px;
@@ -37,14 +40,16 @@
   }
 
   section:last-child{
+    background-color: $white;
+    padding-bottom: 10px;
+    margin-bottom: 0;
+
     @media #{$large-only}{
-      width: 71%;
-      padding: 20px 30px;
-      float: left;
+      width: 73%;
+      padding: 30px 27px 20px;
+      float: right;
     }
   }
-
-  background-color: $white;
 
   h1{
     color: $oil;
@@ -54,8 +59,10 @@
     letter-spacing: 0;
 
     @media #{$large-only}{
+      // font-weight: 700;
       text-align: left;
-      font-size: 1em;
+      font-size: 1.04em;
+      line-height: 1.3em;
     }
   }
 
@@ -92,7 +99,7 @@
 .col{
   width: 25%;
   float: left;
-  padding: 3px;
+  padding: 0 3px 3px;
   box-sizing: border-box;
 }
 
@@ -169,13 +176,15 @@
   }
 }
 
-
-
 .sponsors {
   width: 100%;
   display: block;
   text-align: center;
-  height: 100px;
+
+  @media #{$large-only} {
+    text-align: left;
+  }
+  // height: 100px;
   // height: 50px;
   // background-color: red;
 
@@ -187,7 +196,12 @@
   //   // background-color: blue;
 
     img {
-      height: 100%;
+      height: 97px;
+      padding: 10px 10px 0;
+
+      @media #{$large-only} {
+        padding: 0 5px 5px 0;
+      }
     }
   // }
 }
